Add main requried functionality
