# api/swagger.yaml
@@ -1,144 +1,125 @@
-openapi: 3.0.1
+swagger: "2.0"
 info:
   title: Brand API
-  description: Brand API v1
   version: 1.0.0
-servers:
-- url: /
+host: localhost
+basePath: /
+schemes:
+  - https
+produces:
+  - application/json
 paths:
   /v1/brand:
     get:
       tags:
-      - Brand
+        - Brand
       summary: Get a list of brands
       parameters:
-      - name: skip
-        in: query
-        description: Number of items to skip
-        required: false
-        style: form
-        explode: true
-        schema:
+        - name: skip
+          in: query
+          required: false
           type: integer
           default: 0
-      - name: take
-        in: query
-        description: Number of items to take
-        required: false
-        style: form
-        explode: true
-        schema:
+          format: int32
+        - name: take
+          in: query
+          required: false
           type: integer
           default: 20
+          format: int32
       responses:
         "200":
           description: OK
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/BrandResponse'
-                x-content-type: application/json
+          schema:
+            type: array
+            items:
+              $ref: "#/definitions/BrandResponse"
         "400":
           description: Bad Request
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: "#/definitions/ErrorResponse"
         "500":
           description: Internal Server Error
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
+          schema:
+            $ref: "#/definitions/ErrorResponse"
       security:
-      - TokenAuth: []
+        - TokenAuth: []
     post:
       tags:
-      - Brand
+        - Brand
       summary: Create a brand
-      requestBody:
-        description: Brand object
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/BrandCreateRequest'
-        required: true
       responses:
         "201":
           description: Created
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/BrandResponse'
+          schema:
+            $ref: "#/definitions/BrandResponse"
         "400":
           description: Bad Request
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: "#/definitions/ErrorResponse"
         "500":
           description: Internal Server Error
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ErrorResponse'
+          schema:
+            $ref: "#/definitions/ErrorResponse"
       security:
-      - TokenAuth: []
-      x-codegen-request-body-name: body
-components:
-  schemas:
-    BrandCreateRequest:
-      type: object
-      properties:
-        description:
-          $ref: '#/components/schemas/BrandCreateRequest_description'
-        name:
-          type: string
-    BrandResponse:
-      type: object
-      properties:
-        added:
-          type: integer
-          format: int32
-        addedby:
-          type: string
-        changed:
-          type: integer
-          format: int32
-        changedby:
-          type: string
-        description:
-          $ref: '#/components/schemas/BrandCreateRequest_description'
-        id:
-          type: integer
-          format: int32
-        name:
-          type: string
-      example:
-        added: 0
-        addedby: addedby
-        changedby: changedby
-        name: name
-        description:
-          en: en
-        id: 1
-        changed: 6
-    ErrorResponse:
-      type: object
-      properties:
-        message:
-          type: string
-    BrandCreateRequest_description:
-      type: object
-      properties:
-        en:
-          type: string
-      example:
-        en: en
-  securitySchemes:
-    TokenAuth:
-      type: apiKey
-      name: Authorization
-      in: header
+        - TokenAuth: []
+      consumes:
+        - application/json
+      produces:
+        - application/json
+      parameters:
+        - name: body
+          in: body
+          description: Brand object
+          required: true
+          schema:
+            $ref: "#/definitions/BrandCreateRequest"
+definitions:
+  BrandCreateRequest:
+    type: "object"
+    properties:
+      name:
+        type: "string"
+  BrandResponse:
+    type: "object"
+    properties:
+      added:
+        type: "integer"
+        format: "int32"
+      addedby:
+        type: "string"
+      changed:
+        type: "integer"
+        format: "int32"
+      changedby:
+        type: "string"
+      id:
+        type: "integer"
+        format: "int32"
+      name:
+        type: "string"
+    example:
+      added: 0
+      addedby: "addedby"
+      changedby: "changedby"
+      name: "name"
+      id: 1
+      changed: 6
+  ErrorResponse:
+    type: "object"
+    properties:
+      message:
+        type: "string"
+securityDefinitions:
+  TokenAuth:
+    type: "apiKey"
+    name: "Authorization"
+    in: "header"
